fix(stack): items gap

--- a/src/components/Aside/Aside.module.scss
+++ b/src/components/Aside/Aside.module.scss
@@ -98,7 +98,7 @@
 	&__item {
 		$-item: &;
 		font-size: math.div(14, 16) + 0em;
-		padding: 0.25em 0.5em;
+		padding: 0.125em 0.5em;
 		border-radius: 0.25em;
 		background: silver;
 		font-weight: 800;
